# webeye.downtime-aggregator

./: Dockerfile  pyproject.toml
src/: context.py  main.py  settings.py
src/monitored_webpages/: exceptions.py  model.py  persistence.py
src/monitoring_events/: exceptions.py  model.py  persistence.py  service.py
src/scheduled_tasks/: model.py  persistence.py
src/user_account/: exceptions.py  model.py  persistence.py
src/utils/: datetime_parsing.py  ses.py
